<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/contraint_Layout" android:background="#EFECEC">
    <TextView
            android:text="@string/box_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/box_one_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            style="@style/WhiteBox" android:fontFamily="@font/roboto"/>
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp" android:id="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" style="@style/WhiteBox"
            android:fontFamily="@font/roboto"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/box_three_text"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/box_four_text"
            style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/box_five_text"
            style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/label_text"
            android:fontFamily="@font/roboto" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/info_text"/>
    <TextView
            android:text="@string/tap_the_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/info_text"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/label_text"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            android:textAlignment="center"/>
    <Button
            android:text="@string/box_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/red_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/green_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/green_button" android:layout_marginStart="16dp"
            app:backgroundTint="@color/my_red"/>
    <Button
            android:text="@string/box_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/green_button"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/info_text"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="16dp" app:backgroundTint="@color/my_green"/>
    <Button
            android:text="@string/box_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/yellow_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/green_button"
            app:layout_constraintStart_toEndOf="@+id/green_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:backgroundTint="@color/my_yellow"/>
</androidx.constraintlayout.widget.ConstraintLayout>